--- a/src/js/components/Photo/photo.scss
+++ b/src/js/components/Photo/photo.scss
@@ -1,6 +1,6 @@
 .photoitems {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 250px);
+  grid-template-columns: repeat(auto-fit, 350px);
   gap: 20px;
   .photoitem {
     display: grid;
@@ -66,5 +66,11 @@
       background-color: #d9a441;
       color: white;
     }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .photoitems {
+    grid-template-columns: 1fr;
   }
 }
